# UltrabotStepByStep

./: 00-introduction.md  01-hello-llm-your-first-ai-conversation.md  02-streaming-the-agent-loop.md  03-tool-calling-give-the-llm-superpowers.md  04-more-tools-toolset-composition.md  05-configuration-system.md  06-provider-abstraction-multiple-llms.md  07-anthropic-provider-adding-claude.md  08-cli-interactive-repl.md  09-session-persistence-remembering-conversations.md  10-circuit-breaker-provider-failover.md  11-message-bus-events.md  12-security-guard.md  13-channel-base-telegram.md  14-discord-slack-channels.md  15-gateway-server-multi-channel-orchestration.md  16-chinese-platform-channels-wecom-weixin-feishu-qq.md  17-expert-system-personas.md  18-expert-router-dynamic-switching.md  19-web-ui-browser-based-chat.md  20-cron-scheduler-automated-tasks.md  21-daemon-manager-heartbeat.md  22-memory-store-long-term-knowledge.md  23-media-pipeline-images-and-documents.md  24-smart-chunking-platform-aware-message-splitting.md  25-context-compression-scaling-long-conversations.md  26-prompt-caching-auxiliary-client.md  27-security-hardening-injection-detection-credential-.md  28-browser-automation-subagent-delegation.md  29-operational-polish-usage-updates-doctor-themes-aut.md  30-full-project-packaging-ship-it.md  README.md
01/tests/: test_session1.py
01/ultrabot/: chat_1.py
02/tests/: test_session2.py
02/ultrabot/: agent.py  chat_stream.py  main.py
03/: pyproject.toml
03/tests/: test_session3.py
03/ultrabot/: main.py
03/ultrabot/tools/: builtin.py
04/tests/: test_session4.py
04/ultrabot/: agent.py  chat.py
05/: pyproject.toml
05/tests/: test_session5.py
06/tests/: test_session6.py
06/ultrabot/providers/: openai_compat.py  registry.py
07/: pyproject.toml
07/tests/: test_session7.py
07/ultrabot/providers/: base.py
07/ultrabot/tools/: builtin.py
08/: pyproject.toml
08/tests/: test_session8.py
08/ultrabot/: agent.py
08/ultrabot/cli/: commands.py
08/ultrabot/tools/: toolsets.py
09/tests/: test_session9.py
09/ultrabot/config/: loader.py  schema.py
10/scripts/: demo_failover.py
10/tests/: test_circuit_breaker.py  test_session10.py
10/ultrabot/config/: __init__.py
10/ultrabot/providers/: circuit_breaker.py  manager.py
11/tests/: test_bus.py  test_bus_integration.py  test_bus_real_agent.py
11/ultrabot/: __main__.py
11/ultrabot/bus/: queue.py
11/ultrabot/config/: schema.py
12/: pyproject.toml
12/tests/: test_security.py
12/ultrabot/bus/: events.py
13/: config.example.json  demo_telegram.py  pyproject.toml
13/tests/: test_channels_base.py
13/ultrabot/: agent.py  main.py
13/ultrabot/channels/: telegram.py
13/ultrabot/config/: loader.py
13/ultrabot/gateway/: server.py
14/: config.example.json  demo_discord.py
14/tests/: test_channels_platform.py
14/ultrabot/gateway/: __main__.py  server.py
14/ultrabot/security/: guard.py
15/: pyproject.toml
15/ultrabot/gateway/: server.py
16/ultrabot/channels/: discord_channel.py  feishu.py  qq.py  wecom.py  weixin.py
17/ultrabot/bus/: __init__.py
17/ultrabot/cli/: stream.py
17/ultrabot/session/: manager.py
18/: pyproject.toml
18/ultrabot/bus/: events.py
18/ultrabot/experts/: __init__.py  router.py  sync.py
18/ultrabot/providers/: anthropic_provider.py  openai_compat.py
19/: pyproject.toml
19/tests/: test_experts_persona.py
19/ultrabot/bus/: queue.py
19/ultrabot/webui/: __init__.py  __main__.py  app.py
20/: pyproject.toml
20/ultrabot/providers/: base.py
20/ultrabot/security/: __init__.py
20/ultrabot/session/: __init__.py
20/ultrabot/tools/: base.py
21/ultrabot/config/: paths.py
22/: pyproject.toml
22/ultrabot/config/: schema.py
22/ultrabot/daemon/: manager.py
22/ultrabot/gateway/: __init__.py
22/ultrabot/heartbeat/: service.py
22/ultrabot/providers/: manager.py
23/tests/: test_gateway.py
24/tests/: test_daemon_heartbeat.py
24/ultrabot/channels/: feishu.py  qq.py
24/ultrabot/experts/: parser.py
24/ultrabot/media/: __init__.py
25/tests/: test_cron_scheduler.py  test_experts_router.py
25/ultrabot/chunking/: __init__.py
27/: pyproject.toml
27/tests/: test_chinese_channels.py  test_chunking.py  test_context_compressor.py  test_media_pipeline.py  test_prompt_cache.py  test_security.py  test_webui.py
28/: pyproject.toml
28/tests/: test_memory_store.py
29/tests/: test_browser_delegate.py
30/: .gitignore  README.md  pyproject.toml
30/tests/: test_operational.py  test_packaging.py
30/ultrabot/: __init__.py  __main__.py
30/ultrabot/agent/: context_compressor.py  delegate.py  title_generator.py
30/ultrabot/channels/: base.py  group_activation.py  pairing.py
30/ultrabot/chunking/: chunker.py
30/ultrabot/cli/: commands.py
30/ultrabot/config/: migrations.py
30/ultrabot/gateway/: __main__.py
30/ultrabot/providers/: auth_rotation.py
30/ultrabot/skills/: manager.py
30/ultrabot/tools/: base.py  toolsets.py
(+30 files in other folders)
