[project]
name = "ultrabot"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
discord = ["discord.py>=2.4"]
feishu = ["lark-oapi>=1.4"]
qq = ["qq-botpy>=1.2"]
slack = ["slack-sdk>=3.39"]
telegram = ["python-telegram-bot[socks]>=22.0"]
wecom = ["wecom-aibot-sdk>=0.1"]
weixin = ["pycryptodome>=3.20"]
all = ["ultrabot[discord]", "ultrabot[feishu]", "ultrabot[qq]", "ultrabot[slack]", "ultrabot[telegram]", "ultrabot[wecom]", "ultrabot[weixin]"]
dev = ["pytest>=9.0", "pytest-asyncio>=1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
