# pyproject.toml
[project]
name = "ultrabot-ai"
version = "0.1.0"
description = "A robust, feature-rich personal AI assistant framework with circuit breakers, failover, parallel tools, and plugin system"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "ultrabot contributors"}
]
keywords = ["ai", "agent", "chatbot", "assistant", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

# ── 核心依赖（始终安装） ─────────────────────────────────
dependencies = [
    "typer>=0.20.0,<1.0.0",                  # CLI 框架
    "anthropic>=0.45.0,<1.0.0",              # Anthropic SDK
    "openai>=2.8.0",                          # OpenAI SDK
    "pydantic>=2.12.0,<3.0.0",              # 配置验证
    "pydantic-settings>=2.12.0,<3.0.0",     # 环境变量加载
    "httpx>=0.28.0,<1.0.0",                 # 异步 HTTP（辅助客户端、提供商）
    "loguru>=0.7.3,<1.0.0",                 # 结构化日志
    "rich>=14.0.0,<15.0.0",                 # 终端格式化
    "prompt-toolkit>=3.0.50,<4.0.0",        # 交互式 REPL
    "questionary>=2.0.0,<3.0.0",            # 安装向导
    "croniter>=6.0.0,<7.0.0",               # Cron 调度
    "tiktoken>=0.12.0,<1.0.0",              # Token 计数
    "aiosqlite>=0.21.0,<1.0.0",             # 异步 SQLite（记忆、用量）
    "json-repair>=0.57.0,<1.0.0",           # 修复 LLM 产生的格式错误 JSON
    "chardet>=3.0.2,<6.0.0",                # 字符编码检测
    "ddgs>=9.5.5,<10.0.0",                  # DuckDuckGo 搜索工具
    "websockets>=16.0,<17.0",               # WebSocket 支持
]

# ── 可选依赖组 ───────────────────────────────────────────
# 每个消息通道和功能都是一个可选附加依赖。
# 只安装你需要的：pip install ultrabot-ai[telegram]
[project.optional-dependencies]
telegram = [
    "python-telegram-bot[socks]>=22.6,<23.0",
]
discord = [
    "discord.py>=2.4.0,<3.0.0",
]
slack = [
    "slack-sdk>=3.39.0,<4.0.0",
    "slackify-markdown>=0.2.0,<1.0.0",
]
feishu = [
    "lark-oapi>=1.4.0,<2.0.0",
]
qq = [
    "qq-botpy>=1.2.0,<2.0.0",
    "aiohttp>=3.9.0,<4.0.0",
]
wecom = [
    "wecom-aibot-sdk>=0.1.0",
]
weixin = [
    "pycryptodome>=3.20.0,<4.0.0",
    "qrcode>=8.0,<9.0",
]
mcp = [
    "mcp>=1.26.0,<2.0.0",
]
webui = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
]
# ── 便捷组 ───────────────────────────────────────────────
all = [
    "ultrabot-ai[telegram,discord,slack,feishu,qq,wecom,weixin,mcp,webui]",
]
dev = [
    "pytest>=9.0.0,<10.0.0",
    "pytest-asyncio>=1.3.0,<2.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
    "ruff>=0.1.0",
]

# ── 控制台入口点 ─────────────────────────────────────────
# 安装包后会创建 `ultrabot` 命令。
[project.scripts]
ultrabot = "ultrabot.cli.commands:app"

# ── 构建系统 ─────────────────────────────────────────────
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "ultrabot/**/*.py",
    "ultrabot/templates/**/*.md",
    "ultrabot/skills/**/*.md",
    "ultrabot/experts/personas/**/*.md",
    "ultrabot/webui/static/**/*",
]

[tool.hatch.build.targets.wheel]
packages = ["ultrabot"]

# ── Ruff（代码检查 + 格式化） ───────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]     # 长行我们自己处理

# ── Pytest ───────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ── 覆盖率 ───────────────────────────────────────────────
[tool.coverage.run]
source = ["ultrabot"]
omit = ["tests/*", "**/tests/*"]
